# vnx-base

./: CMakeLists.txt  README.md  codegen.sh  compile.sh  create_debian.sh  create_windows.sh  install.sh  make_debug.sh  make_devel.sh  make_msvc.bat  make_release.sh  make_wasm.sh  show_cloc.sh  test_all.sh
arm/debian/: control
doc/: VNX-user-guide.tex
doc/diagrams/: network_diagram.odg  process.odg  software_stack.odg
doc/tutorials/: simple_publish.cpp
include/vnx/: AsyncClient.h  Authentication.h  BaseProxy.h  Buffer.hpp  CRC64.h  Client.h  Config.h  Directory.h  File.h  Hash128.h  Hash64.h  Input.h  Input.hpp  InputStream.h  Module.h  ModuleBase.h  Object.h  Object.hpp  Output.h  Output.hpp  OutputStream.h  PrettyPrinter.h  Process.h  Proxy.h  SHA256.h  Server.h  Subscriber.h  Terminal.h  ThreadPool.h  Topic.h  TopicPtr.h  Type.h  Util.h  Util.hpp  Variant.h  Variant.hpp  Visitor.h  WinUtils.h  exception.h  vnx.h
include/vnx/test/: Test.h
include/wasm/: vnx_base_export.h
interface/: Heartbeat.vni  package.vni
modules/: BaseProxy.vni
src/: AsyncClient.cpp  Authentication.cpp  BaseProxy.cpp  BaseServer.cpp  Binary.cpp  Buffer.cpp  CRC64.cpp  Client.cpp  Config.cpp  Endpoint.cpp  Exception.cpp  File.cpp  Gateway.cpp  Generic.cpp  GenericAsyncClient.cpp  GenericClient.cpp  Input.cpp  InternalError.cpp  JRPC_Client.cpp  JRPC_Proxy.cpp  JRPC_Request.cpp  JRPC_Response.cpp  JRPC_Server.cpp  JSON.cpp  LogMsg.cpp  Memory.cpp  Module.cpp  ModuleBase.cpp  ModuleInfo.cpp  MultiRecordReader.cpp  Node.cpp  Object.cpp  Output.cpp  Pipe.cpp  Player.cpp  PrettyPrinter.cpp  Process.cpp  Proxy.cpp  Publisher.cpp  RecordReader.cpp  (+25 more)
src/linux/: Directory.cpp  Endpoint.cpp  File.cpp  Process.cpp  Terminal.cpp  Util.cpp
src/test/: Test.cpp
src/win32/: Directory.cpp  Endpoint.cpp  File.cpp  Process.cpp  Terminal.cpp  Util.cpp  WinUtils.cpp
test/: CMakeLists.txt  split_text.sh  test_config.cpp  test_glibc_bug_31841.cpp  test_input_output.cpp  test_json_parse.cpp  test_variant.cpp  test_variant_gen_vitest.cpp
test/afl/dat/inputs_unique/: current_road_map.road  labels.json
test/afl/json/inputs_unique/: Basler_FL.json  Controller.json  Database.json  Gateway.json  ImagePreProcessor.json  LidarCalibration.json  OdometryModule.json  PathSampler.json  RectifyFilter_2.json  ScanFilter_2.json  StructureView_FN.json  Test.json  Velodyne_FL.json  XKEcBqPM06H1Z7zGOdG5fbICuf8NWK5R.json  folderTree.json  session.json  snap-store.json
test/config/: jarray.jary  parent  sample  slist.lst  string  string2  text.txt
test/interface/: TestValue.vni  test_struct_t.vni
tools/: .gitignore  CMakeLists.txt  echo_crc64_table.cpp  vnxclose.cpp  vnxdump.cpp  vnxgraph.cpp  vnxpasswd.cpp  vnxplay.cpp  vnxread.cpp  vnxreadcsv.cpp  vnxrecord.cpp  vnxrouter.cpp  vnxservice.cpp  vnxtimeserver.cpp  vnxtopic.cpp
